--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 2,
 
-  "name": "One-click Kittens",
+  "name": "Mute Tabs",
   "description": "This extension demonstrates a 'browser action' with kittens.",
   "version": "1.0",
-
+  "background": {
+    "scripts": ["background.js"]
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "https://secure.flickr.com/"
+    "tabs"
   ]
 }
