--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,25 @@
 {
   "manifest_version": 2,
 
-  "name": "Mute Tabs",
+  "name": "Kittens",
   "description": "This extension demonstrates a 'browser action' with kittens.",
   "version": "1.0",
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["jquery-2.1.1.min.js","background.js"]
   },
+  "content_scripts": [{
+            "matches": [
+                        "https://*/*"
+                              ],
+                  "js": [
+                              "jquery-2.1.1.min.js","inject.js"
+                                    ]
+                                        }],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "tabs"
+    "tabs","bookmarks"
   ]
 }
