--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "This extension demonstrates a 'browser action' with kittens.",
   "version": "1.0",
   "background": {
-    "scripts": ["jquery-2.1.1.min.js","background.js"]
+    "scripts": ["background.js"]
   },
   "content_scripts": [{
             "matches": [
@@ -20,6 +20,6 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "tabs","bookmarks","storage"
+    "tabs","bookmarks","storage","<all_urls>"
   ]
 }
